# misc_ecs

./: COPYRIGHT  Cargo.toml  README.md
src/: data.rs  ecs.rs  gen.rs  lib.rs  main.rs  prelude.rs  store.rs
src/ecs/: component.rs  entity.rs  store.rs  system.rs  world.rs
